fix: pl list with on tablet, hide after from form button on mobile

--- a/src/assets/s3d/styles/pages/s3d-plannings.scss
+++ b/src/assets/s3d/styles/pages/s3d-plannings.scss
@@ -91,6 +91,7 @@
     grid-area: content;
     display: flex;
     height: 100%;
+
     flex-direction: column;
     align-content: flex-start;
     overflow: hidden;
@@ -462,6 +463,7 @@
     position: relative;
     // transition: width 0.3s linear;
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100vw;
 
     &-pending {
       position: absolute;
@@ -630,6 +632,7 @@
 
       &.s3d-open-filter {
         transform: translateX(0);
+        height: 100%;
       }
     }
   }
@@ -672,6 +675,7 @@
 
       &.s3d-open-filter {
         transform: translateX(0);
+        height: 100%;
       }
     }
   }
