--- a/src/assets/s3d2/styles/templates/villa/s3d2-contactUs.scss
+++ b/src/assets/s3d2/styles/templates/villa/s3d2-contactUs.scss
@@ -137,6 +137,16 @@
           }
         }
 
+        @media screen and (max-width: 1023px) {
+          button::after {
+            display: none;
+          }
+
+          button:hover {
+            background: var(--s3d2-color-brand-900) !important;
+          }
+        }
+
         svg {
           position: absolute;
           top: 46%;
